Updated the client according to the API definitions for 0.9.92 (#33)
* Updated the client according to the API definitions for 0.9.92

* adding EndpointAccessGatewaySubnetIds for Azure

---------
